# cli-programs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  plan.md
.claude/: settings.local.json
.claude/commands/: update-changelog.md  update-version.md
add-reminders/: CHANGELOG.md  Cargo.toml  README.md
add-reminders/src/: main.rs
ask/: CHANGELOG.md  Cargo.toml  README.md  setup-shell.sh
ask/src/: llm.rs  main.rs
blog/: 2025-10-20.md  GUIDELINES.md
bookname/: CHANGELOG.md  Cargo.toml  README.md
bookname/src/: llm.rs  main.rs
bookworm/: CHANGELOG.md  Cargo.toml
bookworm/assets/: annas-arch-e436ddf00520.epub
bookworm/src/: llm.rs  main.rs
changelog-validator/: CHANGELOG.md  Cargo.toml  README.md
changelog-validator/src/: lib.rs
changelog-validator/tests/: validate_all_changelogs.rs
code-review/: CHANGELOG.md  Cargo.toml  README.md
code-review/src/: main.rs
gc/: CHANGELOG.md  Cargo.toml  README.md  todo.md
gc/src/: config.rs  llm.rs  main.rs  prompts.rs
gc/tests/: integration_tests.rs
gen-audiobook/src/: main.rs
gena/: CHANGELOG.md  Cargo.toml  README.md
gena/src/: config.rs  epub.rs  main.rs
gena/src/tts/: macos_say.rs  mod.rs
git-clean/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
git-clean/src/: main.rs
git-merge/: CHANGELOG.md  Cargo.toml  README.md
git-merge/src/: main.rs
help-slots/: CHANGELOG.md  Cargo.toml  README.md
help-slots/src/: app.rs  capture.rs  input.rs  main.rs  preprocessing.rs  window.rs
help-slots/src/puzzles/: mod.rs  reticle.rs
install/: Cargo.toml  README.md
install/src/: main.rs
issues/: issue-001.md
llm-client/: CHANGELOG.md  Cargo.toml  README.md
llm-client/src/: config.rs  error.rs  fallback.rs  lib.rs  provider.rs
llm-client/src/providers/: anthropic.rs  cerebras.rs  claude_cli.rs  mock.rs  mod.rs  openai_compatible.rs  openrouter.rs
plans/: plan-002.md  plan-003.md
plans/completed/: plan-003.md  plan-004.md
sandbox/: CHANGELOG.md  Cargo.toml  README.md  todo.md
sandbox/src/: config.rs  docker.rs  interactive.rs  main.rs  state.rs  worktree.rs
sandbox/template/: Dockerfile
sandbox/templates/: Dockerfile
sandbox/tests/: cli.rs
sandy/: CHANGELOG.md  Cargo.toml  README.md
sandy/src/: config.rs  docker.rs  interactive.rs  main.rs  state.rs  worktree.rs
sandy/template/: Dockerfile  entrypoint.sh
sandy/tests/: cli.rs
test-review/: CHANGELOG.md  Cargo.toml  README.md
test-review/src/: detector.rs  main.rs  report.rs  runners.rs  suggestions.rs
track-changes/: CHANGELOG.md  Cargo.toml  README.md
track-changes/src/: config.rs  git.rs  launchd.rs  log.rs  main.rs
transcribe/: CHANGELOG.md  Cargo.toml  README.md
transcribe/src/: audio.rs  config.rs  main.rs
update-cli-programs/: CHANGELOG.md  Cargo.toml  README.md
update-cli-programs/src/: main.rs
zoom-remove/: CHANGELOG.md  Cargo.toml  README.md
zoom-remove/src/: launchd.rs  main.rs
