[workspace]
members = ["gc", "git-clean", "update-cli-programs", "changelog-validator"]
resolver = "2"

# Shared dependencies across all tools
[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
once_cell = "1.19"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
