[workspace]
members = ["add-reminders", "ask", "bookworm", "gc", "git-clean", "git-merge", "update-cli-programs", "changelog-validator", "llm-client", "sandbox"]
resolver = "2"

# Shared dependencies across all tools
[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
once_cell = "1.19"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
