[package]
name = "help-slots"
version = "0.1.0"
edition = "2024"

[dependencies]
# Screen capture
xcap = "0.7"

# Image processing
image = "0.25"
imageproc = "0.25"

# Input handling (hotkeys and key injection)
rdev = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI (workspace)
clap = { workspace = true }

# Error handling (workspace)
anyhow = { workspace = true }

# Config (workspace)
serde = { workspace = true }
toml = { workspace = true }

# Logging (workspace)
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"
