[package]
name = "llm-client"
version = "0.1.0"
edition = "2024"
description = "Shared LLM client library for cli-programs workspace"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = "2.0"
async-trait = "0.1"
genai = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
which = "7.0"
