[package]
name = "sandy"
version = "0.5.0"
edition = "2024"
description = "Claude Code development environments using Docker containers"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = "5.0"
shellexpand = "3.1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
