[package]
name = "test-review"
version = "0.1.0"
edition = "2024"
description = "Analyze test quality using mutation testing, property-based testing, and LLM suggestions"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "process"] }
llm-client = { path = "../llm-client" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"
