[package]
name = "track-changes"
version = "0.1.0"
edition = "2024"
description = "Watch directories and auto-commit changes with timestamps"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
git2 = "0.20"
dirs = "5.0"
